# elections-bot

./: .gitignore  Dockerfile  LICENSE  README.md  deployment.yaml  pyproject.toml  requirements-ci.txt
.github/: dependabot.yml
azure-pipelines/: build-pipeline.yml  release-pipeline.yml
electionsbot/: __init__.py  __main__.py  applications.json  bot.py  constants.py  log.py  testdata.json
electionsbot/cogs/: election.py  general.py
