[tool.poetry]
name = "elections-bot"
version = "0.1.0"
description = "A bot to host staff elections for the Cyber Discovery Discord Server."
authors = ["Cyber Discovery Community <triggerhappymods@cyberdiscoverycommunity.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.2"
asyncpg = "^0.20.1"
gitpython = "^3.1.12"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.2.1"
flake8-todo = "^0.7"
flake8-formatter-junit-xml = "^0.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
